[gd_scene load_steps=33 format=3 uid="uid://niq8wrdh7lx2"]

[ext_resource type="Theme" uid="uid://bk7qnjewnebef" path="res://themes/Titletheme.tres" id="1_faeks"]
[ext_resource type="Script" path="res://title/title.gd" id="1_ffxdt"]
[ext_resource type="Shader" path="res://World/background.gdshader" id="2_ult1y"]
[ext_resource type="FontFile" uid="uid://dutpghayd3oqf" path="res://fonts/Retro Gaming.ttf" id="3_iy4j3"]
[ext_resource type="Shader" path="res://title/buttonHover.gdshader" id="5_d5uk3"]
[ext_resource type="Texture2D" uid="uid://bryllot8i386n" path="res://flyingBot/botbody.png" id="6_bxb8d"]
[ext_resource type="Texture2D" uid="uid://by8gp385d08jh" path="res://flyingBot/botwing.png" id="7_42byj"]
[ext_resource type="Texture2D" uid="uid://djji3pdr5wpo1" path="res://flyingBot/hoverparticle.png" id="8_ll4u6"]
[ext_resource type="Texture2D" uid="uid://6ci634jsykc8" path="res://addons/MASHLOG/Textures/Mashicons/1.png" id="10_fg40m"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t4m5i"]
shader = ExtResource("2_ult1y")
shader_parameter/aspect = 8.0
shader_parameter/basePulse = 2.0
shader_parameter/bg_color = null
shader_parameter/color1 = Quaternion(0, 0.3, 0.6, 1)
shader_parameter/color2 = Quaternion(0.6, 0, 0.3, 1)
shader_parameter/dataspeed = 0.375
shader_parameter/doInput = true
shader_parameter/height = 0.5
shader_parameter/line_freq = 3.0
shader_parameter/numBlocks = 32
shader_parameter/scale = Vector2(0.013, 0.025)
shader_parameter/size = null
shader_parameter/speed = 0.375
shader_parameter/ySpread = null

[sub_resource type="Shader" id="Shader_nrfp5"]
code = "shader_type canvas_item;
uniform float aspect = 2.0;
uniform vec2 size = vec2(0.3);
uniform float dataspeed = 0.7;
uniform float ySpread = 1.6;
uniform int numBlocks = 70;
uniform float basePulse = 0.33;
uniform vec4 color1 = vec4(0.0,0.3, 0.6, 1.0);
uniform vec4 color2 = vec4(0.6, 0.0, 0.3, 1.0);
uniform bool doInput=true;
float rand(float x)
{
    return fract(sin(x) * 4358.5453123);
}
float rand2(vec2 co)
{
    return fract(sin(dot(co.xy ,vec2(12.9898,78.233))) * 43758.5357);
}

float pulseColor()
{
	float myPulse = basePulse + sin(TIME) * 0.1;
	return myPulse < 1.0 ? myPulse : 1.0;
}

float box(vec2 p, vec2 b, float r)
{
  return length(max(abs(p)-b,0.0))-r;
}

void fragment() {
	float pulse = pulseColor();
	
	vec2 uv = UV - 0.5;
	vec4 baseColor = uv.x > 0.0 ? color1 : color2;
	
	vec4 color = pulse*baseColor*0.5*(0.9-cos(uv.x*8.0));
	uv.x *= aspect;
	
	for (int i = 0; i < numBlocks; i++)
	{
		float z = 1.0-0.7*rand(float(i)*1.4333); // 0=far, 1=near
		float tickTime = TIME*z*dataspeed + float(i)*1.23753;
		float tick = floor(tickTime);
		
		vec2 pos = vec2(0.6*aspect*(rand(tick)-0.5), sign(uv.x)*ySpread*(0.5-fract(tickTime)));
		pos.x += 0.24*sign(pos.x); // move aside
		if (abs(pos.x) < 0.1) pos.x++; // stupid fix; sign sometimes returns 0
		pos=round(pos*24.)/24.;
		uv.y=round(uv.y*32.)/32.;
		uv.x=round(uv.x*32.)/32.;
		// vec2 size = 1.8*z*vec2(0.04, 0.04 + 0.1*rand(tick+0.2));
		float b = box(uv-pos, size, 0.01);
		float dust = z*smoothstep(0.22, 0.0, b)*pulse*0.5;
		float block = 0.2*z*smoothstep(0.002, 0.0, b);
		float shine = 0.6*z*pulse*smoothstep(-0.002, b, 0.007);
		color += dust*baseColor + block*z + shine;
	}
	color -= rand2(uv)*0.04;
	color*=0.75;
	color.rgb=min(color.rgb,vec3(1.5));
	color=mix(texture(SCREEN_TEXTURE,SCREEN_UV),color,0.5);
	COLOR=color;
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_54ktm"]
shader = SubResource("Shader_nrfp5")
shader_parameter/aspect = 8.0
shader_parameter/basePulse = 2.0
shader_parameter/color1 = Quaternion(0, 0.3, 0.6, 1)
shader_parameter/color2 = Quaternion(0.6, 0, 0.3, 1)
shader_parameter/dataspeed = 0.375
shader_parameter/doInput = false
shader_parameter/numBlocks = 32
shader_parameter/size = Vector2(0.3, 0.3)
shader_parameter/ySpread = 1.6

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vfos6"]
shader = ExtResource("5_d5uk3")
shader_parameter/shake_block_size = 30.5
shader_parameter/shake_color_rate = 0.025
shader_parameter/shake_power = 0.013
shader_parameter/shake_rate = 0.25
shader_parameter/shake_speed = 5.0

[sub_resource type="Animation" id="Animation_hltm1"]
resource_name = "titleAnimation"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.9, 4.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": ["[center][shake level=8 rate=10]WOR(L)D SWAP[/shake][/center]", "[center][shake level=8 rate=10]SWAP WOR(L)D[/shake][/center]", "[center][shake level=8 rate=10]WOR(L)D SWAP[/shake][/center]"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RichTextLabel:visible_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.6, 1.9, 2.2, 4.6, 4.9, 5.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [1.0, 1.0, 0.0, 1.0, 1.0, 0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gmen8"]
_data = {
"titleAnimation": SubResource("Animation_hltm1")
}

[sub_resource type="Animation" id="Animation_k2yn3"]
resource_name = "load"
length = 4.0
tracks/0/type = "animation"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("itemsAnimations")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": PackedStringArray("main", "buttons"),
"times": PackedFloat32Array(0.3, 1.6)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_olfib"]
_data = {
"load": SubResource("Animation_k2yn3")
}

[sub_resource type="Animation" id="Animation_cimj8"]
resource_name = "buttons"
length = 2.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Menu/play")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"grab_focus"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Menu/play:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.1, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 0.75, 2.5),
"update": 0,
"values": [Vector2(-64, -400), Vector2(-64, -400), Vector2(-64, -12), Vector2(-64, -44)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Menu/settings:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.9, 1.1, 1.3),
"transitions": PackedFloat32Array(1, 1, 0.75, 2.5),
"update": 0,
"values": [Vector2(764, 52), Vector2(764, 52), Vector2(-256, 52), Vector2(-221, 52)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Menu/quit:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4, 0.7, 0.9),
"transitions": PackedFloat32Array(1, 1, 0.5, 2.5),
"update": 0,
"values": [Vector2(-764, 112), Vector2(-764, 112), Vector2(-32, 112), Vector2(-64, 112)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Menu/play:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.1, 1.4, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 0.420448),
"update": 0,
"values": [-50.2655, -50.2655, -0.523599, 0.0]
}

[sub_resource type="Animation" id="Animation_gjeep"]
resource_name = "main"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Menu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1.6245, 0.554785),
"update": 0,
"values": [Vector2(576, -324), Vector2(576, 324)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Menu/RichTextLabel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(0.554785, 3.24901, 1),
"update": 0,
"values": [Vector2(-62, -250), Vector2(-62, -200), Vector2(-62, -250)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Menu/RichTextLabel:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.5), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Menu:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_x6sar"]
resource_name = "toggleControls"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Menu:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(0.25, 2, 0.25),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.25, 1.25), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Controls:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 0.8, 1.1),
"transitions": PackedFloat32Array(0.25, 2, 0.25),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1.25, 1.25), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_pd54p"]
resource_name = "toggleCredits"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Menu:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(0.25, 2, 0.25),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.25, 1.25), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Credits:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 0.8, 1),
"transitions": PackedFloat32Array(0.25, 2, 0.25),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.25, 1.25), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vwvg1"]
_data = {
"buttons": SubResource("Animation_cimj8"),
"main": SubResource("Animation_gjeep"),
"toggleControls": SubResource("Animation_x6sar"),
"toggleCredits": SubResource("Animation_pd54p")
}

[sub_resource type="GDScript" id="GDScript_xcil1"]
script/source = "extends Node2D

func _ready():$AnimationPlayer.play(\"hover\")
func _process(delta):
	var moveDir=(get_global_mouse_position()+Vector2(32,32))-global_position
	var angle=moveDir.distance_to(Vector2(0,0))*0.00025*PI*sign(moveDir.x)
	if angle<-PI/4:angle=-PI/4
	if angle>PI/4:angle=PI/4
	rotation=lerp_angle(rotation,angle,delta*10)
	position+=moveDir*delta*3
"

[sub_resource type="Gradient" id="Gradient_kqvo6"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.25098)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_5bxxy"]
gradient = SubResource("Gradient_kqvo6")
width = 32

[sub_resource type="Curve" id="Curve_tuiom"]
_data = [Vector2(0, 1), 0.0, 0.0308166, 0, 0, Vector2(1, 2), 3.6124e-07, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_kdern"]
width = 32
curve = SubResource("Curve_tuiom")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_h5l70"]
particle_flag_disable_z = true
direction = Vector3(0, 1, 0)
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 8.0
initial_velocity_max = 8.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 2.0
scale_max = 2.0
scale_curve = SubResource("CurveTexture_kdern")
color = Color(0.2, 4, 4, 1)
color_ramp = SubResource("GradientTexture1D_5bxxy")

[sub_resource type="CurveTexture" id="CurveTexture_xcd1i"]
width = 32
curve = SubResource("Curve_tuiom")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_wjkd0"]
particle_flag_disable_z = true
direction = Vector3(0, 1, 0)
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 8.0
initial_velocity_max = 8.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 2.0
scale_max = 2.0
scale_curve = SubResource("CurveTexture_xcd1i")
color = Color(0.2, 4, 4, 1)
color_ramp = SubResource("GradientTexture1D_5bxxy")

[sub_resource type="Animation" id="Animation_l24ou"]
resource_name = "hover"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5, 0.9, 1.1, 1.4, 1.5, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -2), Vector2(0, -2), Vector2(0, 0), Vector2(0, 0), Vector2(0, 2), Vector2(0, 2), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BotwingL:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 1, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.261799, 0.0, -0.261799]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BotwingR:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6, 1, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.261799, 0.0, 0.261799]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qi8aa"]
_data = {
"hover": SubResource("Animation_l24ou")
}

[node name="title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_faeks")
script = ExtResource("1_ffxdt")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_t4m5i")
offset_right = 1152.0
offset_bottom = 648.0

[node name="ColorRect2" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_54ktm")
offset_right = 1152.0
offset_bottom = 648.0

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = -324.0
theme = ExtResource("1_faeks")

[node name="RichTextLabel" type="RichTextLabel" parent="Menu"]
clip_contents = false
offset_left = -62.0
offset_top = -250.0
offset_right = 62.0
offset_bottom = -102.0
pivot_offset = Vector2(62, 82)
theme_override_constants/line_separation = -24
theme_override_fonts/normal_font = ExtResource("3_iy4j3")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center][shake level=8 rate=10]WOR(L)D SWAP[/shake][/center]"
fit_content_height = true
autowrap_mode = 2
tab_size = 1

[node name="play" type="Button" parent="Menu"]
offset_left = -64.0
offset_top = -400.0
offset_right = 64.0
offset_bottom = -346.0
rotation = -50.2655
pivot_offset = Vector2(64, 27)
theme_override_font_sizes/font_size = 36
text = "PLAY"

[node name="settings" type="HBoxContainer" parent="Menu"]
offset_left = 764.0
offset_top = 52.0
offset_right = 1199.0
offset_bottom = 92.0
pivot_offset = Vector2(180, 26)
theme_override_constants/separation = 12
alignment = 1

[node name="Control" type="Control" parent="Menu/settings"]
layout_mode = 3
anchors_preset = 0
offset_left = 163.0
offset_right = 163.0
offset_bottom = 40.0

[node name="credits" type="Button" parent="Menu/settings/Control"]
custom_minimum_size = Vector2(136, 0)
offset_left = 100.0
offset_top = -32.0
offset_right = 236.0
offset_bottom = 8.0
mouse_filter = 1
text = "Credits"

[node name="fullscreen" type="Button" parent="Menu/settings/Control"]
offset_left = -84.0
offset_top = -32.0
offset_right = 85.0
offset_bottom = 8.0
mouse_filter = 1
toggle_mode = true
text = "Fullscreen"

[node name="controls" type="Button" parent="Menu/settings"]
custom_minimum_size = Vector2(96, 0)
offset_left = 175.0
offset_right = 271.0
offset_bottom = 40.0
text = "Info"

[node name="quit" type="Button" parent="Menu"]
offset_left = -764.0
offset_top = 112.0
offset_right = -636.0
offset_bottom = 166.0
pivot_offset = Vector2(64, 27)
theme_override_font_sizes/font_size = 36
text = "QUIT"

[node name="hoveredShader" type="ColorRect" parent="Menu"]
visible = false
material = SubResource("ShaderMaterial_vfos6")
offset_left = -64.0
offset_top = -44.0
offset_right = 64.0
offset_bottom = 10.0
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Menu"]
libraries = {
"": SubResource("AnimationLibrary_gmen8")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_olfib")
}

[node name="itemsAnimations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vwvg1")
}

[node name="mousefollow" type="Node2D" parent="."]
z_index = 8
scale = Vector2(4, 4)
script = SubResource("GDScript_xcil1")

[node name="flyingBot" type="Sprite2D" parent="mousefollow"]
texture = ExtResource("6_bxb8d")

[node name="BotwingL" type="Sprite2D" parent="mousefollow/flyingBot"]
z_index = -1
position = Vector2(-4, -2)
texture = ExtResource("7_42byj")
offset = Vector2(-4, 2)

[node name="HoverParticles" type="GPUParticles2D" parent="mousefollow/flyingBot/BotwingL"]
z_index = -1
position = Vector2(-4, 3)
amount = 4
lifetime = 0.5
process_material = SubResource("ParticleProcessMaterial_h5l70")
texture = ExtResource("8_ll4u6")

[node name="BotwingR" type="Sprite2D" parent="mousefollow/flyingBot"]
z_index = -1
position = Vector2(4, -2)
texture = ExtResource("7_42byj")
offset = Vector2(4, 2)
flip_h = true

[node name="HoverParticles" type="GPUParticles2D" parent="mousefollow/flyingBot/BotwingR"]
z_index = -1
position = Vector2(5, 3)
amount = 4
lifetime = 0.5
process_material = SubResource("ParticleProcessMaterial_wjkd0")
texture = ExtResource("8_ll4u6")

[node name="face" type="Sprite2D" parent="mousefollow/flyingBot"]
modulate = Color(0, 0.780392, 0, 1)
scale = Vector2(0.4, 0.4)
texture = ExtResource("10_fg40m")

[node name="AnimationPlayer" type="AnimationPlayer" parent="mousefollow"]
root_node = NodePath("../flyingBot")
libraries = {
"": SubResource("AnimationLibrary_qi8aa")
}

[node name="Credits" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(576, 324)
theme = ExtResource("1_faeks")

[node name="VBoxContainer" type="VBoxContainer" parent="Credits"]
offset_right = 1152.0
offset_bottom = 648.0

[node name="Label" type="Label" parent="Credits/VBoxContainer"]
custom_minimum_size = Vector2(1152, 0)
offset_right = 1152.0
offset_bottom = 85.0
theme_override_font_sizes/font_size = 64
text = "Credits"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Credits/VBoxContainer"]
offset_top = 89.0
offset_right = 1152.0
offset_bottom = 133.0
theme_override_font_sizes/font_size = 32
text = "Made By:"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="Credits/VBoxContainer"]
offset_top = 137.0
offset_right = 1152.0
offset_bottom = 205.0
text = "Roger T. Grange-Programmer
Logan Rubenstein-Designer"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Credits"]
offset_left = 519.0
offset_top = 452.0
offset_right = 595.0
offset_bottom = 492.0
scale = Vector2(1.5, 1.5)
text = "BACK"

[node name="Controls" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(576, 324)
theme = ExtResource("1_faeks")

[node name="Label" type="Label" parent="Controls"]
custom_minimum_size = Vector2(1152, 0)
offset_top = 8.0
offset_right = 1152.0
offset_bottom = 93.0
theme_override_font_sizes/font_size = 64
text = "|Controls|              |OBJECTS|"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Controls"]
offset_left = 519.0
offset_top = 516.0
offset_right = 595.0
offset_bottom = 556.0
scale = Vector2(1.5, 1.5)
text = "BACK"

[connection signal="focus_entered" from="Menu/play" to="." method="play_focus" binds= ["play"]]
[connection signal="mouse_entered" from="Menu/play" to="." method="play_focus" binds= ["play"]]
[connection signal="pressed" from="Menu/play" to="." method="pressPlay"]
[connection signal="pressed" from="Menu/settings/Control/credits" to="." method="_on_credits_pressed"]
[connection signal="focus_entered" from="Menu/quit" to="." method="play_focus" binds= ["quit"]]
[connection signal="mouse_entered" from="Menu/quit" to="." method="play_focus" binds= ["quit"]]
[connection signal="pressed" from="Menu/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Credits/Button" to="." method="_on_back"]
[connection signal="pressed" from="Controls/Button" to="." method="_on_backControls_pressed"]
